package miembros;

public enum TipoDocumento {
  DNI,
  LIBRETA_CIVICA
}
