package transportes;

public class APie extends Transporte {

  public APie() {
  }
}
