package transportes;

public class Bicicleta extends Transporte {

  public Bicicleta() {
  }
}
