package transportes;

public class Parada {

  private String direccion;

  public Parada(String direccion) {
    this.direccion = direccion;
  }
}
