package transportes;

public enum TipoCombustible {
  GNC,
  NAFTA,
  GASOIL,
  ELECTRICO
}
