package trayectos;

public class Punto {

  private String direccion;

  public Punto(String direccion) {
    this.direccion = direccion;
  }
}
