@startuml

class Miembro {
    String nombre
    String apellido
    int numeroDocumento
    Map<Sector, Organizacion> trabajos
}

enum TipoDocumento {
    DNI
    LIBRETA_CIVICA
}

enum Clasificacion {
    MINISTERIO
    UNIVERSIDAD
    ESCUELA
    EMPRESA_SECTOR_PRIMARIO
    EMPRESA_SECTOR_SECUNDARIO
}

class Organizacion {
    String razonSocial
    String ubicacion
}

class Sector

enum TipoOrganizacion {
    GUBERNAMENTAL
    ONG
    EMPRESA
    INSTITUCION
}

class APie
class Bicicleta

class Parada {
    String direccion
}


class ServicioContratado

enum TipoCombustible {
    GNC
    NAFTA
    GASOIL
    ELECTRICO
}

enum TipoServicioContratado {
    TAXI
    REMIS
}

enum TipoTransportePublico {
    TREN
    SUBTE
    COLECTIVO
}

enum TipoVehiculo {
    MOTO
    AUTO
    CAMIONETA
}

abstract class Transporte

class TransportePublico {
    int linea
}

class VehiculoParticular

class Punto {
    String direccion
}

class Tramo {
    Transporte transporte;
  private Punto puntoInicio;
  private Punto puntoFinal;
}
class Trayecto

Miembro --> TipoDocumento
Miembro --> "*" Sector

Organizacion --> TipoOrganizacion
Organizacion --> Clasificacion
Organizacion --> "*" Sector
Sector --> Organizacion
Sector --> "*" Miembro

APie --|> Transporte
Bicicleta --|> Transporte
ServicioContratado --|> Transporte
ServicioContratado --> TipoServicioContratado
TransportePublico --|> Transporte
TransportePublico --> TipoTransportePublico
TransportePublico --> "*" Parada
VehiculoParticular --|> Transporte
VehiculoParticular --> TipoVehiculo
VehiculoParticular --> TipoCombustible

Tramo --> Transporte
Tramo --> "inicio" Punto
Tramo --> "final" Punto
Trayecto --> "*" Tramo

@enduml